los sockets rebotan

--- a/src/otro.html
+++ b/src/otro.html
@@ -19,7 +19,7 @@ $("#cargar_otro").click(function() {
 <div></div>
 <div></div>
 <div></div>
-<div>Pagina 2</div>
+<div>Otro.html</div>
 <div></div>
 <div></div>
 <div><a class="btn btn-primary m-4" id="volver">volver</a> </div>
