--- a/src/buffer.html
+++ b/src/buffer.html
@@ -1,28 +1,38 @@
 <script type="text/javascript">
   $(document).ready(function() {
-$("#iniciar_remesa").click(function() {
-  socket.emit("iniciar_remesa",'iniciar_remesa');
+///////////////////////////////////////////////////////
+  $("#iniciar_nueva_remesa").click(function() {
+    socket.emit("iniciar_nueva_remesa",'iniciar_nueva_remesa');
+  });
+  socket.on('iniciar_nueva_remesa_paso2', function(msg){
+  //  $('#display').load("./nueva_remesa_paso_2.html");
+      $('#display').html(msg);
+  });
+///////////////////////////////////////////////////////
+$("#config").on("click",function() {
+socket.emit("config",'config');
 });
 
-$("#borrar_todo").click(function() {
-    socket.emit("borrar_pizarra",'borrar_pizarra');
+///////////////////////////////////////////////////////
 });
 
-$("#cargar_otro").click(function() {
-  socket.emit("cargar_otro",'cargar_otro');
-//  alert('GENIO');
+socket.on('config2', function(msg){
+  console.log("en client side, recibi el socket config...");
+//  $('#display').load("./system/configuracion.html");
+    $('#display').html(msg);
 });
 
-
- });
  </script>
 
-<div></div>
-<div>Pagina 1</div>
-<div></div>
-<div><a class="btn btn-primary m-4" id="iniciar_remesa">Iniciar remesa</a> </div>
-<div><a class="btn btn-primary m-4" id="borrar_todo">borrar todo</a> </div>
-<div><a class="btn btn-primary m-4" id="cargar_otro">Siguiente</a> </div>
-<div></div>
-<div></div>
-<div></div>
+ <div class="wrapper">
+   <div class="titulo">
+     <div class=""><div id="system_running_indicator"><i class="fas fa-atom fa-xs"></i></div></div>
+     <div id="message">Tambox 1.0</div>
+     <div class="btn volver" id='config'><i class="far fa-list-alt fa-2x"></i></div>
+   </div>
+   <div class="grupo2">
+     <div><a class="btn btn-primary m-4" id="iniciar_nueva_remesa">Iniciar remesa</a> </div>
+     <!-- <div><a class="btn btn-primary m-4" id="borrar_todo">borrar todo</a> </div> -->
+     <!-- <div><a class="btn btn-primary m-4" id="cargar_otro">cargar otro</a> </div> -->
+   </div>
+ </div>
