--- a/src/system/configuracion.html
+++ b/src/system/configuracion.html
@@ -22,11 +22,15 @@
 
  </script>
   <div class="wrapper">
-    <div class="titulo">
+    <div class="titulo2">
       <div class="btn" id='main'><i class="fas fa-long-arrow-alt-left  fa-1x"></i></div>
+      <div class="">
+
+      </div>
       <div>Configuración</div>
       <div class=""><div id="system_running_indicator"><i class="fas fa-atom fa-xs"></i></div></div>
     </div>
+
     <div class="grupo">
       <div></div>
       <div class="btn" id='cuadre_diario'><i class="far fa-clipboard fa-4x"></i> Cuadre diario</div>
