funciona bien, nuevo entorno todo socket. previo a limpieza general,

--- a/src/system/configuracion.html
+++ b/src/system/configuracion.html
@@ -34,7 +34,7 @@
     <div class="grupo">
       <div></div>
       <div class="btn" id='cuadre_diario'><i class="far fa-clipboard fa-4x"></i> Cuadre diario</div>
-      <div class="btn" id='montos'><i class="fas fa-chart-bar fa-4x"></i> Cifras Generales</div>
+      <div class="btn" id='cifras_generales'><i class="fas fa-chart-bar fa-4x"></i> Cifras Generales</div>
       <div class="btn" id='remesa_hermes'><i class="fas fa-money-bill-alt fa-4x"></i>Remesa Hermes</div>
       <div class="btn" id='info'><i class="fas fa-info fa-4x"></i>Información General</div>
       <!-- <div class="btn" id='sincro'><i class="fab fa-hubspot fa-4x"></i>sincronización Manual</div> -->
