--- a/src/system/cuadre_diario/cuadre_diario.html
+++ b/src/system/cuadre_diario/cuadre_diario.html
@@ -7,7 +7,7 @@
   $('#monto_total_egresos').html(mydata.monto_total_egresos);
   $('#trans_global').html(mydata.trans_global);
   $('#saldo').html(mydata.saldo);
-  $('#moneda').html(mydata.moneda);
+//  $('#moneda').html(mydata.moneda);
 });
 
  </script>
@@ -30,17 +30,17 @@
         <tr>
           <td>Remesas</td>
           <td> <div id="no_remesas"></div> </td>
-          <td><div id="moneda"></div> <div id="monto_total_remesas"></div>.00</td>
+          <td><div id="monto_total_remesas"></div></td>
         </tr>
         <tr>
           <td>Egresos</td>
           <td><div id="no_egresos"></div></td>
-          <td><div class="moneda"></div><div class="monto_total_egresos"></div>.00</td>
+          <td><div class="monto_total_egresos"></div></td>
         </tr>
         <tr>
           <td>Totales</td>
           <td><div id="trans_global"></div></td>
-          <td><div id="moneda"></div><div id="saldo"></div>.00</td>
+          <td><div id="saldo"></div></td>
         </tr>
 
       </table>
