avanzxando remesa hermes

--- a/src/system/buffer.html
+++ b/src/system/buffer.html
@@ -24,5 +24,6 @@
      <div></div>
      <div></div>
      <div><a class="btn btn-primary m-4" id="iniciar_nueva_remesa">Iniciar remesa</a> </div>
+          <div><a class="btn btn-primary m-4" id="trigger_socket">Trigger socket</a> </div>
    </div>
  </div>
