--- a/src/system/cuadre_diario/cuadre_diario.html
+++ b/src/system/cuadre_diario/cuadre_diario.html
@@ -17,7 +17,7 @@
     <div class="titulo">
       <div class="btn volver" id='config'><i class="fas fa-long-arrow-alt-left  fa-1x"></i></div>
       <div>Cuadre Diario</div>
-      <div class="btn volver" id='soporte'>Soporte</div>
+      <!-- <div class="btn volver" id='soporte'>Soporte</div> -->
     </div>
 
     <div class="cuadre_diario">
