--- a/src/system/remesa_hermes/remesa_hermes.html
+++ b/src/system/remesa_hermes/remesa_hermes.html
@@ -42,7 +42,7 @@
   <div ></div>
 
   <div ></div>
-  <div ></div>
+  <div class="btn" id='Smart_emptying' style="width:200px; align:center;">Smart_emptying</div>
   <div class="btn" id='smart_empty' style="width:200px; align:center;">Procesar</div>
   <div ></div>
   <div ></div>
