--- a/src/system/remesa_hermes/vaciando.html
+++ b/src/system/remesa_hermes/vaciando.html
@@ -1,11 +1,13 @@
 <body  oncontextmenu="return false">
   <div class="wrapper">
     <div class="titulo">
+      <div class=""><div id="system_running_indicator"><i class="fas fa-atom fa-xs"></i></div></div>
       <div id="message">Procesando...</div>
     </div>
 
     <div class="remesa_hermes">
       <div class="mensaje_centrado">Un momento Por Favor, Estamos acomodando los billetes en la bolsa</div>
+      <div class="btn" id='Smart_emptied' style="width:200px; align:center;">Smart_emptying</div>
     </div>
   </div>
   <!-- <div id="message">
