--- a/src/system/remesa_hermes/remesa_hermes.html
+++ b/src/system/remesa_hermes/remesa_hermes.html
@@ -21,35 +21,22 @@
 });
 </script>
 <body  oncontextmenu="return false">
-  <div class="wrapper">
-    <div class="titulo">
+  <div class="wrapper2">
+    <div class="titulo2">
     <div class="btn volver" id='config'>Configuracion</div>
-    <div>Remesa Hermes</div>
+    <div id="TBM_icon"><i class="fas fa-wifi fa-sm" id="status_online"></i></div>
+    <div class="mensaje">Remesa Hermes</div>
     <div class=""><div id="system_running_indicator"><i class="fas fa-atom fa-xs"></i></div></div>
     </div>
 
 <div class="remesa_hermes">
-  <div ></div>
-  <div ></div>
   <div class="mensaje">Desea proceder con la remesa Hermes? </div>
-  <div ></div>
-  <div ></div>
-
-  <div ></div>
-  <div ></div>
   <div class="mensaje_pequeno">En este proceso la maquina vaciará todo el dinero disponible para pagos en la bolsa de dinero</div>
-  <div ></div>
-  <div ></div>
-
-  <div ></div>
   <div class="btn" id='Smart_emptying' style="width:200px; align:center;">Smart_emptying</div>
   <div class="btn" id='smart_empty' style="width:200px; align:center;">Procesar</div>
-  <div ></div>
-  <div ></div>
-
  </div>
 
   </div>
-  <div id="message"><ol></ol></div>
+
 
 </body>
