--- a/src/system/buffer.html
+++ b/src/system/buffer.html
@@ -20,6 +20,9 @@
      <div class=""><div id="system_running_indicator"><i class="fas fa-atom fa-xs"></i></div></div>
      <div id="TBM_icon"><i class="fas fa-wifi fa-sm" id="status_online"></i></div>
      <div id="message">Tambox 1.0</div>
+     <div id="msg1">
+       Bloqueado
+     </div>
      <div class="btn volver" id='config'><i class="far fa-list-alt fa-2x"></i></div>
   </div>
    <div class="grupo4">
