--- a/src/system/configuracion.html
+++ b/src/system/configuracion.html
@@ -10,6 +10,9 @@
 
       </div>
       <div>Configuración</div>
+      <div id="msg1">
+        Bloqueado
+      </div>
       <div class=""><div id="system_running_indicator"><i class="fas fa-atom fa-xs"></i></div></div>
     </div>
 
