--- a/src/system/remesa_hermes/rm_2.html
+++ b/src/system/remesa_hermes/rm_2.html
@@ -3,11 +3,14 @@
     <div class="titulo">
       <div class=""><div id="system_running_indicator"><i class="fas fa-atom fa-xs"></i></div></div>
       <div id="message">Procesando...</div>
+      <div id="msg1">
+        Bloqueado
+      </div>
     </div>
 
-    <div class="remesa_hermes">
-      <div class="mensaje_centrado">Un momento Por Favor, Estamos acomodando los billetes en la bolsa</div>
-      <div class="btn" id='Smart_emptied' style="width:200px; align:center;">Smart_emptying</div>
+    <div class="parent">
+      <div class="mensaje_centrado div2">Un momento Por Favor, Estamos acomodando los billetes en la bolsa</div>
+      <div class="btn div3" id='Smart_emptied' style="width:200px; align:center;">next step (Smart_emptied)</div>
     </div>
   </div>
   <!-- <div id="message">
