--- a/src/system/remesa_hermes/rm_4_1.html
+++ b/src/system/remesa_hermes/rm_4_1.html
@@ -2,16 +2,13 @@
   <div class="wrapper">
     <div class="titulo">
       <div class=""><div id="system_running_indicator"><i class="fas fa-atom fa-xs"></i></div></div>
-      <div>Reemplace la bolsa de dinero</div>
+      <div>El Cajon esta fuera</div>
     </div>
     <div class="remesa_hermes">
       <div></div>
       <div class="mensaje_mediano">
         <ul>
-          <li>Introduzca la llave y gírela</li>
-          <li>Tire de la manija para retirar el cofre de dinero</li>
-          <li>Retire la bolsa plástica y entregar a Hermes</li>
-          <li>Tome una nueva bolsa de dinero vacía y colóquela en el cofre de dinero</li>
+          <li>Esta pantalla desaparece cuando el cajon volvio a entrar a la maquina</li>
             <div class="btn" id="Cashbox_Back_in_Service"> Next</div>
         </ul>
       </div>
