--- a/src/system/remesa_hermes/rm_1.html
+++ b/src/system/remesa_hermes/rm_1.html
@@ -26,14 +26,30 @@
     <div class="btn volver" id='config'>Configuracion</div>
     <div id="TBM_icon"><i class="fas fa-wifi fa-sm" id="status_online"></i></div>
     <div class="mensaje">Remesa Hermes</div>
+    <div id="msg1">
+      Bloqueado
+    </div>
     <div class=""><div id="system_running_indicator"><i class="fas fa-atom fa-xs"></i></div></div>
     </div>
 
-<div class="remesa_hermes">
-  <div class="mensaje">Desea proceder con la remesa Hermes? </div>
-  <div class="mensaje_pequeno">En este proceso la maquina vaciará todo el dinero disponible para pagos en la bolsa de dinero</div>
-  <div class="btn" id='Smart_emptying' style="width:200px; align:center;">Smart_emptying</div>
-  <div class="btn" id='smart_empty' style="width:200px; align:center;">Procesar</div>
+<div class="parent">
+
+  <div class="current_remesa div1">
+    <div class="fecha_creacion">fecha de creacion:2/11/2020</div>
+    <div class="dias_durando">dias:1</div>
+    <div class="monto_en_bolsa">monto en bolsa:S/.3469.00</div>
+    <div class="monto_reciclador">monto en reciclador:S/.4220.00</div>
+  </div>
+
+  <div class="div2">
+    <div class="mensaje">Desea proceder con el cierre de la remesa Hermes? </div>
+    <div class="mensaje_pequeno">En este proceso la maquina vaciará todo el dinero disponible para pagos en la bolsa de dinero</div>
+  </div>
+
+  <div class="btn div3" id='smart_empty' style="width:200px; align:center;">Iniciar</div>
+  <div class="btn div4" id='main' style="width:200px; align:center;">Cancelar</div>
+  <div class="btn" id='Smart_emptying' style="width:200px; align:center;">Skip</div>
+
  </div>
 
   </div>
