sockets funcionando por separado, threats

--- a/src/system/buffer.html
+++ b/src/system/buffer.html
@@ -18,10 +18,15 @@
   //     $('#display').html(msg);
   // });
 
-   // socket.on('main', function(msg){
-   //     $('#display').html(msg);
-   //     //alert("fer");
-   // });
+   socket.on('main', function(msg){
+       //$('#display').html(msg);
+       alert("fer");
+   });
+
+   socket.on('fer', function(msg){
+       //$('#display').html(msg);
+       alert("fer");
+   });
 
    // socket.on('cancelling', function(msg){
    //     $('#display').html(msg);
