--- a/src/system/remesa/remesa_1.html
+++ b/src/system/remesa/remesa_1.html
@@ -87,7 +87,7 @@
         <div></div>
         <div>
         <a class="btn btn-primary m-2" id="finish">Terminar REMESA</a>
-        <a class="btn btn-primary m-2" id="cancelar_remesa">Cancelar REMESA</a>
+        <a class="btn btn-primary m-2" id="cancelar_remesa">Cancelar REMESAx</a>
         </div>
     </div>
 
