elk flujo de paginas de remesa hermes esta completo. desde main hasta el timer de proceso completado.

--- a/src/system/configuracion.html
+++ b/src/system/configuracion.html
@@ -21,5 +21,8 @@
       <div class="btn btn_grupo4" id='cifras_generales'><i class="fas fa-chart-bar fa-4x"></i> Cifras Generales</div>
       <div class="btn btn_grupo4" id='remesa_hermes'><i class="fas fa-money-bill-alt fa-4x"></i>Remesa Hermes</div>
       <div class="btn btn_grupo4" id='info'><i class="fas fa-info fa-4x"></i>Información General</div>
+      <div class="btn btn_grupo4" id='info'><i class="fas fa-info fa-4x"></i>Información General</div>
+      <div class="btn btn_grupo4" id='rm_4'><i class="fas fa-info fa-4x"></i>TESt</div>
+
     </div>
   </div>
