--- a/src/system/remesa_hermes/rm_1.html
+++ b/src/system/remesa_hermes/rm_1.html
@@ -46,10 +46,11 @@
     <div class="mensaje_pequeno">En este proceso la maquina vaciará todo el dinero disponible para pagos en la bolsa de dinero</div>
   </div>
 
-  <div class="btn div3" id='smart_empty' style="width:200px; align:center;">Iniciar</div>
+  <div class="btn div3" id='smart_empty' style="width:200px; align:center;">smart_empty (iniciar)</div>
   <div class="btn div4" id='main' style="width:200px; align:center;">Cancelar</div>
-  <div class="btn" id='Smart_emptying' style="width:200px; align:center;">Skip</div>
-  <div class="btn" id='fer' style="width:200px; align:center;">prueba</div>
+
+  <!-- <div class="btn" id='Smart_emptying' style="width:200px; align:center;">smart emptying(forced)</div>
+  <div class="btn" id='rm_2' style="width:200px; align:center;">rm_2</div> -->
 
 
  </div>
