--- a/src/system/remesa_hermes/rm_4_1.html
+++ b/src/system/remesa_hermes/rm_4_1.html
@@ -10,6 +10,8 @@
         <ul>
           <li>Esta pantalla desaparece cuando el cajon volvio a entrar a la maquina</li>
             <div class="btn" id="Cashbox_Back_in_Service"> Next</div>
+            <div class="btn" id='rm_4' style="width:200px; align:center;">rm_4</div>
+            <div class="btn" id='rm_5' style="width:200px; align:center;">rm5</div>
         </ul>
       </div>
     </div>
