--- a/src/system/remesa_hermes/rm_5.html
+++ b/src/system/remesa_hermes/rm_5.html
@@ -7,6 +7,8 @@
 
     <div class="remesa_hermes">
       <div class="mensaje_centrado2">Proceso completado</div>
+      <div class="btn" id='main'><i class="fas fa-long-arrow-alt-left  fa-1x"></i></div>
+      
     </div>
 
   </div>
