copia de seguridad, remesa hermes y remesa casi funcionando ya, cargando la data adicional a cada pagina.

--- a/src/system/buffer.html
+++ b/src/system/buffer.html
@@ -40,7 +40,7 @@
    <div class="titulo2">
      <div class=""><div id="system_running_indicator"><i class="fas fa-atom fa-xs"></i></div></div>
      <div id="TBM_icon"><i class="fas fa-wifi fa-sm" id="status_online"></i></div>
-     <div id="message">Tambox 1.0</div>
+     <div id="message">request.getParameter("machine_name")</div>
      <div id="msg1">
        Bloqueado
      </div>
