--- a/src/system/remesa_hermes/rm_2.html
+++ b/src/system/remesa_hermes/rm_2.html
@@ -9,6 +9,8 @@
     //  $('#display').innerHTML=msg;
     //  $('#display').html(msg);
   //  $('#display').load("./buffer.html");
+  display_message("Note_Transfered_to_Stacker");
+
   });
 ///////////////////////////////////////////////////////
 //   $("#config").click(function() {
@@ -24,7 +26,7 @@
   <div class="wrapper">
     <div class="titulo">
       <div class=""><div id="system_running_indicator"><i class="fas fa-atom fa-xs"></i></div></div>
-      <div id="message">Procesando...</div>
+      <div id="message2">Procesando...</div>
       <div id="msg1">
         Bloqueado
       </div>
