--- a/src/system/buffer.html
+++ b/src/system/buffer.html
@@ -1,46 +1,16 @@
+
 <script type="text/javascript">
-
   $(document).ready(function() {
-
-  // $("#iniciar_nueva_remesa").click(function() {
-  //   socket.emit("iniciar_nueva_remesa",'iniciar_nueva_remesa');
-  // });
-  // $("#fer").click(function() {
-  //   socket.emit("fer",'genio');
-  // });
-
-
-  // $("#fer").click(function() {
-  //   socket.emit("fer",'genio');
-  // });
-
-  // socket.on('iniciar_nueva_remesa_paso2', function(msg){
-  //     $('#display').html(msg);
-  // });
-
-  // socket.on('main', function(msg){
-  //     $('#display').html(msg);
-  //     alert("fer");
-  // });
-
-   // socket.on('fer', function(msg){
-   //     //$('#display').html(msg);
-   //     alert("fer");
-   // });
-
-   // socket.on('cancelling', function(msg){
-   //     $('#display').html(msg);
-   //     //alert("fer");
-   // });
-
+///////////////////////////////////////////////////////
+  $('#message').text(mydata[0].machine_name);
 });
- </script>
 
+ </script>
  <div class="wrapper2">
    <div class="titulo2">
      <div class=""><div id="system_running_indicator"><i class="fas fa-atom fa-xs"></i></div></div>
      <div id="TBM_icon"><i class="fas fa-wifi fa-sm" id="status_online"></i></div>
-     <div id="message">request.getParameter("machine_name")</div>
+     <div id="message">Tambox 1.0</div>
      <div id="msg1">
        Bloqueado
      </div>
@@ -48,6 +18,6 @@
   </div>
    <div class="grupo4">
      <div><a class="btn btn-primary m-4" id="iniciar_nueva_remesa">Iniciar remesa</a> </div>
-     <div><a class="btn btn-primary m-4" id="fer">Fer</a> </div>
+     <div><a class="btn btn-primary m-4" id="socket_to_tbm">send socket to TBM</a> </div>
    </div>
  </div>
